@@ -3,6 +3,7 @@
 - Improve performance removing some partials and adding some caching for helper overrides and UIs, and caching url generation for lists
 - Drop support for rails 3.1
 - Add HTML5 form fields
+- Add :chosen form_ui, and :chosen and :multi_chosen search_ui
 
 = 3.2.15 (not released yet)
 - Prepare to unify field overrides and list_ui method signatures
